# demo_wb

reports_parser/: __main__.py  config.py  data_former.py  logger.py  pyproject.toml  sheets_worker.py  utils.py
reports_parser/db/: database.py
reports_parser/db/models/: __init__.py  account.py  phone_account.py
reports_parser/parsers/: remains_wb_parser.py  wildberries.py
